[tool.poetry]
name = "spook"
version = "3.2.7"
description = "Django Rest Framework library to interconnect external APIs"
authors = ["Pablo Moreno <pablomoreno.inf@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = ["spook/tests/**"]
keywords = ["http", "api", "microservices"]
homepage = "https://github.com/pablo-moreno/spook"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
django = ">= 2.2.0"
djangorestframework = ">= 3.3.1"
requests = ">= 2.24.0"
coverage = ">= 5.3"
djangorestframework-jwt = ">= 1.11.0"

[tool.poetry.dev-dependencies]
wheel = "^0.34.2"
pytest = "^6.0.1"
coverage = "^5.3"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
